--- a/pos-processor/src/main/resources/homer/tastyworld/frontend/pos/processor/tastyworld-pos-processor.fxml
+++ b/pos-processor/src/main/resources/homer/tastyworld/frontend/pos/processor/tastyworld-pos-processor.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
@@ -8,76 +9,161 @@
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="550.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="homer.tastyworld.frontend.pos.processor.POSProcessorController">
    <children>
-      <GridPane alignment="CENTER" layoutX="115.0" layoutY="171.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-        <columnConstraints>
-            <ColumnConstraints hgrow="SOMETIMES" percentWidth="1.0" />
-          <ColumnConstraints hgrow="SOMETIMES" percentWidth="25.0" />
-            <ColumnConstraints hgrow="SOMETIMES" percentWidth="2.0" />
-          <ColumnConstraints hgrow="SOMETIMES" />
-            <ColumnConstraints hgrow="SOMETIMES" percentWidth="1.0" />
-        </columnConstraints>
-        <rowConstraints>
-            <RowConstraints percentHeight="1.0" vgrow="SOMETIMES" />
-          <RowConstraints vgrow="SOMETIMES" />
-            <RowConstraints percentHeight="1.0" vgrow="SOMETIMES" />
-        </rowConstraints>
+      <AnchorPane AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
-            <ScrollPane fx:id="scrollOrders" fitToWidth="true" focusTraversable="false" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-            <GridPane alignment="CENTER" GridPane.columnIndex="3" GridPane.rowIndex="1">
+            <GridPane alignment="CENTER" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
               <columnConstraints>
+                  <ColumnConstraints hgrow="SOMETIMES" percentWidth="1.0" />
+                <ColumnConstraints hgrow="SOMETIMES" percentWidth="25.0" />
+                  <ColumnConstraints hgrow="SOMETIMES" percentWidth="2.0" />
                 <ColumnConstraints hgrow="SOMETIMES" />
+                  <ColumnConstraints hgrow="SOMETIMES" percentWidth="1.0" />
               </columnConstraints>
               <rowConstraints>
-                <RowConstraints percentHeight="15.0" vgrow="SOMETIMES" />
-                  <RowConstraints percentHeight="2.0" vgrow="SOMETIMES" />
+                  <RowConstraints percentHeight="1.0" vgrow="SOMETIMES" />
                 <RowConstraints vgrow="SOMETIMES" />
+                  <RowConstraints percentHeight="1.0" vgrow="SOMETIMES" />
               </rowConstraints>
                <children>
-                  <GridPane>
+                  <ScrollPane fx:id="scrollOrders" fitToWidth="true" focusTraversable="false" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                  <GridPane alignment="CENTER" GridPane.columnIndex="3" GridPane.rowIndex="1">
                     <columnConstraints>
-                        <ColumnConstraints hgrow="SOMETIMES" percentWidth="20.0" />
                       <ColumnConstraints hgrow="SOMETIMES" />
-                      <ColumnConstraints hgrow="SOMETIMES" percentWidth="20.0" />
                     </columnConstraints>
                     <rowConstraints>
+                      <RowConstraints percentHeight="15.0" vgrow="SOMETIMES" />
+                        <RowConstraints percentHeight="2.0" vgrow="SOMETIMES" />
                       <RowConstraints vgrow="SOMETIMES" />
                     </rowConstraints>
                      <children>
                         <GridPane>
                           <columnConstraints>
+                              <ColumnConstraints hgrow="SOMETIMES" percentWidth="20.0" />
                             <ColumnConstraints hgrow="SOMETIMES" />
-                              <ColumnConstraints hgrow="SOMETIMES" percentWidth="80.0" />
-                            <ColumnConstraints hgrow="SOMETIMES" />
+                            <ColumnConstraints hgrow="SOMETIMES" percentWidth="20.0" />
                           </columnConstraints>
                           <rowConstraints>
                             <RowConstraints vgrow="SOMETIMES" />
-                            <RowConstraints percentHeight="80.0" vgrow="SOMETIMES" />
-                            <RowConstraints vgrow="SOMETIMES" />
                           </rowConstraints>
                            <children>
-                              <AnchorPane fx:id="printOrderImgBtn" onMouseClicked="#printOrderImgBtnPressed" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                              <GridPane>
+                                <columnConstraints>
+                                  <ColumnConstraints hgrow="SOMETIMES" />
+                                    <ColumnConstraints hgrow="SOMETIMES" percentWidth="80.0" />
+                                  <ColumnConstraints hgrow="SOMETIMES" />
+                                </columnConstraints>
+                                <rowConstraints>
+                                  <RowConstraints vgrow="SOMETIMES" />
+                                  <RowConstraints percentHeight="80.0" vgrow="SOMETIMES" />
+                                  <RowConstraints vgrow="SOMETIMES" />
+                                </rowConstraints>
+                                 <children>
+                                    <AnchorPane fx:id="printOrderImgBtn" onMouseClicked="#printOrderImgBtnPressed" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                                 </children>
+                              </GridPane>
+                              <GridPane GridPane.columnIndex="1">
+                                <columnConstraints>
+                                  <ColumnConstraints hgrow="SOMETIMES" />
+                                </columnConstraints>
+                                <rowConstraints>
+                                  <RowConstraints percentHeight="30.0" vgrow="SOMETIMES" />
+                                    <RowConstraints vgrow="SOMETIMES" />
+                                </rowConstraints>
+                                 <children>
+                                    <AnchorPane fx:id="orderCreatedTimeTopic" />
+                                    <AnchorPane fx:id="orderNameTopic" GridPane.rowIndex="1" />
+                                 </children>
+                              </GridPane>
+                              <AnchorPane fx:id="doneOrderImgBtn" onMouseClicked="#doneOrderImgBtnPressed" GridPane.columnIndex="2" />
                            </children>
                         </GridPane>
-                        <GridPane GridPane.columnIndex="1">
-                          <columnConstraints>
-                            <ColumnConstraints hgrow="SOMETIMES" />
-                          </columnConstraints>
-                          <rowConstraints>
-                            <RowConstraints percentHeight="30.0" vgrow="SOMETIMES" />
-                              <RowConstraints vgrow="SOMETIMES" />
-                          </rowConstraints>
-                           <children>
-                              <AnchorPane fx:id="orderCreatedTimeTopic" />
-                              <AnchorPane fx:id="orderNameTopic" GridPane.rowIndex="1" />
-                           </children>
-                        </GridPane>
-                        <AnchorPane fx:id="doneOrderImgBtn" onMouseClicked="#doneOrderImgBtnPressed" GridPane.columnIndex="2" />
+                        <ScrollPane fx:id="scrollItems" prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="2" />
                      </children>
                   </GridPane>
-                  <ScrollPane fx:id="scrollItems" prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="2" />
                </children>
             </GridPane>
          </children>
-      </GridPane>
+      </AnchorPane>
+      <AnchorPane fx:id="editItemQtyPaneParent" visible="false" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+         <children>
+            <GridPane AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+               <columnConstraints>
+                  <ColumnConstraints hgrow="ALWAYS" />
+                  <ColumnConstraints hgrow="ALWAYS" percentWidth="65.0" />
+                  <ColumnConstraints hgrow="ALWAYS" />
+               </columnConstraints>
+               <rowConstraints>
+                  <RowConstraints vgrow="ALWAYS" />
+                  <RowConstraints percentHeight="75.0" vgrow="ALWAYS" />
+                  <RowConstraints vgrow="ALWAYS" />
+               </rowConstraints>
+               <children>
+                  <AnchorPane onMouseClicked="#closeEditItemQtyPane" />
+                  <AnchorPane onMouseClicked="#closeEditItemQtyPane" GridPane.columnIndex="1" />
+                  <AnchorPane onMouseClicked="#closeEditItemQtyPane" GridPane.columnIndex="2" />
+                  <AnchorPane onMouseClicked="#closeEditItemQtyPane" GridPane.rowIndex="1" />
+                  <AnchorPane style="-fx-background-color: #F5F5F5; -fx-background-radius: 25; -fx-border-color: #999999; -fx-border-radius: 25;" GridPane.columnIndex="1" GridPane.rowIndex="1">
+                     <children>
+                        <GridPane AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                           <columnConstraints>
+                              <ColumnConstraints hgrow="SOMETIMES" percentWidth="3.0" />
+                              <ColumnConstraints hgrow="SOMETIMES" />
+                              <ColumnConstraints hgrow="SOMETIMES" percentWidth="3.0" />
+                           </columnConstraints>
+                           <rowConstraints>
+                              <RowConstraints percentHeight="2.0" vgrow="SOMETIMES" />
+                              <RowConstraints percentHeight="10.0" vgrow="SOMETIMES" />
+                              <RowConstraints percentHeight="2.0" vgrow="SOMETIMES" />
+                              <RowConstraints vgrow="SOMETIMES" />
+                              <RowConstraints percentHeight="5.0" vgrow="SOMETIMES" />
+                              <RowConstraints percentHeight="60.0" vgrow="SOMETIMES" />
+                              <RowConstraints percentHeight="3.0" vgrow="SOMETIMES" />
+                           </rowConstraints>
+                           <children>
+                              <GridPane GridPane.columnIndex="1" GridPane.rowIndex="1">
+                                <columnConstraints>
+                                  <ColumnConstraints hgrow="SOMETIMES" percentWidth="2.0" />
+                                    <ColumnConstraints hgrow="SOMETIMES" />
+                                    <ColumnConstraints hgrow="SOMETIMES" percentWidth="75.0" />
+                                  <ColumnConstraints hgrow="SOMETIMES" />
+                                    <ColumnConstraints hgrow="SOMETIMES" percentWidth="2.0" />
+                                </columnConstraints>
+                                <rowConstraints>
+                                  <RowConstraints vgrow="SOMETIMES" />
+                                </rowConstraints>
+                                 <children>
+                                    <AnchorPane fx:id="editItemQtyPaneCloseImgBtn" onMouseClicked="#closeEditItemQtyPane" GridPane.columnIndex="1" />
+                                    <AnchorPane fx:id="editItemQtyPaneCommitImgBtn" onMouseClicked="#editItemQtyPaneCommitImgBtnPressed" GridPane.columnIndex="3" />
+                                 </children>
+                              </GridPane>
+                              <AnchorPane fx:id="editItemQtyTopic" style="-fx-border-color: #000000; -fx-background-color: #FFFFFF; -fx-background-radius: 25; -fx-border-radius: 25;" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+                              <GridPane fx:id="editItemQtyNumbersKeyboard" alignment="CENTER" hgap="5.0" vgap="5.0" GridPane.columnIndex="1" GridPane.rowIndex="5">
+                                 <columnConstraints>
+                                    <ColumnConstraints hgrow="SOMETIMES" />
+                                    <ColumnConstraints hgrow="SOMETIMES" />
+                                    <ColumnConstraints hgrow="SOMETIMES" />
+                                    <ColumnConstraints hgrow="SOMETIMES" />
+                                 </columnConstraints>
+                                 <rowConstraints>
+                                    <RowConstraints vgrow="SOMETIMES" />
+                                    <RowConstraints vgrow="SOMETIMES" />
+                                    <RowConstraints vgrow="SOMETIMES" />
+                                 </rowConstraints>
+                              </GridPane>
+                           </children>
+                        </GridPane>
+                     </children>
+                     <GridPane.margin>
+                        <Insets />
+                     </GridPane.margin>
+                  </AnchorPane>
+                  <AnchorPane onMouseClicked="#closeEditItemQtyPane" GridPane.columnIndex="2" GridPane.rowIndex="1" />
+                  <AnchorPane onMouseClicked="#closeEditItemQtyPane" GridPane.rowIndex="2" />
+                  <AnchorPane onMouseClicked="#closeEditItemQtyPane" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                  <AnchorPane onMouseClicked="#closeEditItemQtyPane" GridPane.columnIndex="2" GridPane.rowIndex="2" />
+               </children>
+            </GridPane>
+         </children>
+      </AnchorPane>
    </children>
 </AnchorPane>
