--- a/pos-processor/src/main/resources/homer/tastyworld/frontend/pos/processor/tastyworld-pos-processor.fxml
+++ b/pos-processor/src/main/resources/homer/tastyworld/frontend/pos/processor/tastyworld-pos-processor.fxml
@@ -58,7 +58,7 @@
                                   <RowConstraints vgrow="SOMETIMES" />
                                 </rowConstraints>
                                  <children>
-                                    <AnchorPane fx:id="printOrderImgBtn" onMouseClicked="#printOrderImgBtnPressed" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                                    <AnchorPane fx:id="startOrderImgBtn" onMouseClicked="#startOrderImgBtnPressed" GridPane.columnIndex="1" GridPane.rowIndex="1" />
                                  </children>
                               </GridPane>
                               <GridPane GridPane.columnIndex="1">
@@ -70,7 +70,19 @@
                                     <RowConstraints vgrow="SOMETIMES" />
                                 </rowConstraints>
                                  <children>
-                                    <AnchorPane fx:id="orderCreatedTimeTopic" />
+                                    <GridPane>
+                                      <columnConstraints>
+                                        <ColumnConstraints hgrow="SOMETIMES" />
+                                        <ColumnConstraints hgrow="SOMETIMES" />
+                                      </columnConstraints>
+                                      <rowConstraints>
+                                        <RowConstraints vgrow="SOMETIMES" />
+                                      </rowConstraints>
+                                       <children>
+                                          <AnchorPane fx:id="orderCreatedTimeTopic" />
+                                          <AnchorPane fx:id="orderDeliveryTopic" GridPane.columnIndex="1" />
+                                       </children>
+                                    </GridPane>
                                     <AnchorPane fx:id="orderNameTopic" GridPane.rowIndex="1" />
                                  </children>
                               </GridPane>
@@ -133,11 +145,12 @@
                                 </rowConstraints>
                                  <children>
                                     <AnchorPane fx:id="editItemQtyPaneCloseImgBtn" onMouseClicked="#closeEditItemQtyPane" GridPane.columnIndex="1" />
+                                    <AnchorPane fx:id="editItemQtyPaneNameTopic" GridPane.columnIndex="2" />
                                     <AnchorPane fx:id="editItemQtyPaneCommitImgBtn" onMouseClicked="#editItemQtyPaneCommitImgBtnPressed" GridPane.columnIndex="3" />
                                  </children>
                               </GridPane>
-                              <AnchorPane fx:id="editItemQtyTopic" style="-fx-border-color: #000000; -fx-background-color: #FFFFFF; -fx-background-radius: 25; -fx-border-radius: 25;" GridPane.columnIndex="1" GridPane.rowIndex="3" />
-                              <GridPane fx:id="editItemQtyNumbersKeyboard" alignment="CENTER" hgap="5.0" vgap="5.0" GridPane.columnIndex="1" GridPane.rowIndex="5">
+                              <AnchorPane fx:id="editItemQtyPaneTotalTopic" style="-fx-border-color: #000000; -fx-background-color: #FFFFFF; -fx-background-radius: 25; -fx-border-radius: 25;" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+                              <GridPane fx:id="editItemQtyPaneNumbersKeyboard" alignment="CENTER" hgap="5.0" vgap="5.0" GridPane.columnIndex="1" GridPane.rowIndex="5">
                                  <columnConstraints>
                                     <ColumnConstraints hgrow="SOMETIMES" />
                                     <ColumnConstraints hgrow="SOMETIMES" />
